--- a/res/xml-sw600dp/default_workspace.xml
+++ b/res/xml-sw600dp/default_workspace.xml
@@ -143,6 +143,13 @@
         launcher:x="1"
         launcher:y="0" />
     <favorite
+        launcher:packageName="com.android.contacts"
+        launcher:className="com.android.contacts.activities.PeopleActivity"
+        launcher:container="-101"
+        launcher:screen="2"
+        launcher:x="2"
+        launcher:y="0" />
+    <favorite
         launcher:packageName="com.android.mms"
         launcher:className="com.android.mms.ui.ConversationList"
         launcher:container="-101"
@@ -153,8 +160,8 @@
         launcher:packageName="com.android.email"
         launcher:className="com.android.email.activity.Welcome"
         launcher:container="-101"
-        launcher:screen="2"
-        launcher:x="2"
+        launcher:screen="4"
+        launcher:x="4"
         launcher:y="0" />
     <favorite
         launcher:packageName="com.android.chrome"
@@ -167,8 +174,8 @@
         launcher:packageName="com.android.browser"
         launcher:className="com.android.browser.BrowserActivity"
         launcher:container="-101"
-        launcher:screen="4"
-        launcher:x="4"
+        launcher:screen="5"
+        launcher:x="5"
         launcher:y="0" />
     <favorite
         launcher:packageName="com.android.camera2"
@@ -181,7 +188,7 @@
         launcher:packageName="com.android.gallery3d"
         launcher:className="com.android.gallery3d.app.GalleryActivity"
         launcher:container="-101"
-        launcher:screen="5"
-        launcher:x="5"
+        launcher:screen="6"
+        launcher:x="6"
         launcher:y="0" />
 </favorites>
