--- a/res/xml/default_workspace.xml
+++ b/res/xml/default_workspace.xml
@@ -139,24 +139,31 @@
         launcher:x="0"
         launcher:y="0" />
     <favorite
+        launcher:packageName="com.android.contacts"
+        launcher:className="com.android.contacts.activities.PeopleActivity"
+        launcher:container="-101"
+        launcher:screen="1"
+        launcher:x="1"
+        launcher:y="0" />
+    <favorite
         launcher:packageName="com.android.mms"
         launcher:className="com.android.mms.ui.ConversationList"
         launcher:container="-101"
-        launcher:screen="1"
+        launcher:screen="3"
         launcher:x="1"
         launcher:y="0" />
     <favorite
         launcher:packageName="com.android.chrome"
         launcher:className="com.google.android.apps.chrome.Main"
         launcher:container="-101"
-        launcher:screen="3"
+        launcher:screen="0"
         launcher:x="3"
         launcher:y="0" />
     <favorite
         launcher:packageName="com.android.browser"
         launcher:className="com.android.browser.BrowserActivity"
         launcher:container="-101"
-        launcher:screen="3"
+        launcher:screen="4"
         launcher:x="3"
         launcher:y="0" />
     <favorite
