--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -25,14 +25,14 @@
     <color name="cling_scrim_background">#80000000</color>
 
     <color name="bubble_dark_background">#20000000</color>
-    <color name="focused_background">#80c6c5c5</color>
+    <color name="focused_background">#80393A3A</color>
 
     <color name="appwidget_error_color">#FCCC</color>
 
     <color name="workspace_icon_text_color">#FFF</color>
 
-    <color name="quantum_panel_text_color">#FF666666</color>
-    <color name="quantum_panel_text_shadow_color">#FFC4C4C4</color>
+    <color name="quantum_panel_text_color">#FFF</color>
+    <color name="quantum_panel_text_shadow_color">#FF3B3B3B</color>
     <color name="outline_color">#FFFFFFFF</color>
     <color name="widget_text_panel">#FF374248</color>
 
@@ -41,5 +41,5 @@
     <color name="primary_dark">#ff283593</color>
     <color name="primary_light">#ff3949AB</color>
     <color name="accent">#ff303F9F</color>
-
+    <color name="background">#ff1b1f23</color>
 </resources>
