Disable hide search bar function:
This needs some overwork,
so disable it for now.

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -24,10 +24,10 @@
             launcher:min="0"
             launcher:max="10" />
 
-        <SwitchPreference
+<!--        <SwitchPreference
             android:key="pref_key_showSearchBar"
             android:title="@string/pref_title_show_search_bar"
-            android:defaultValue="true" />
+            android:defaultValue="true" /> -->
 
     </PreferenceCategory>
 
